# bop

./: .gitignore  .npmrc  Cargo.toml  buildspec.yml  docker-compose.yml  main.tf  package-lock.json  package.json  variables.tf  versions.tf
bot/: index.js  nodemon.json  package-lock.json  package.json
player/: Cargo.toml  Dockerfile  build.rs
player/proto/: player.proto
player/src/: lib.rs  main.rs  server.rs
server/: ecosystem.config.js  main.tf  nodemon.json  outputs.tf  package-lock.json  package.json  variables.tf
server/config/: cloud-init.tpl
server/src/: app.js  events.js  handler.js  messages.js  queue.js  server.js
server/src/plugins/: discord.js  fastify-socket.js  grpc.js  spotify.js
server/src/routes/: callback.js  login.js  queue.js  refresh.js  rooms.js  spotify.js
server/src/shared/: connections.js  discord.js  events.js  helpers.js  spotify.js
web/: main.tf  package-lock.json  package.json  tailwind.config.js  tailwind.css  variables.tf
web/public/: index.html
web/src/: App.js  app.js  index.css  index.js  persistence-observer.js  store.js  styles.css
web/src/Components/: Device.js  Devices.js  NowPlaying.js  Player.js  Playlist.js  Playlists.js  PrivateRoute.js  Queue.js  Search.js  Settings.js  User.js  tracks.js
web/src/Containers/: Host.js  Join.js  Landing.js  Listener.js  Login.js  Player.js  PlayerControls.js  Start.js
web/src/atoms/: client-access-token.js  current-device.js  display-name.js  error-message.js  play-queue.js  player.js  playlists.js  user-credentials.js  user-details.js  username.js
(+113 files in other folders)
