[package]
name = "crowdq-player"
version = "0.1.0"
authors = ["Jonathan Foster <fostertheweb@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "cache", "gateway", "rustls_backend", "voice", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
songbird = { version = "0.1.6" }
tarpc = { version = "0.26" }
